@@ -1,5 +1,9 @@
 cod-tools (unreleased)
 
+  * Added:
+    - COD::SUsage:
+      - several error messages informing about non-zero exit status
+        while opening or closing files.
   * Fixed:
     - codcif:
       - detecting and reporting forbidden vertical tabulation (VT) and
